force-app/main/default/objects/Match__c/Match__c.object-meta.xml
<CustomObject>
    <label>Match</label>
    <pluralLabel>Matches</pluralLabel>
    <nameField>
        <label>Match Name</label>
        <type>Text</type>
        
    </nameField>
    <sharingModel>Read</sharingModel>
    <description>Represents individual matches inside tournaments.</description>
</CustomObject>