force-app/main/default/objects/Match__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <type>Lookup</type>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>