force-app/main/default/objects/Match__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <label>Tournament</label>
    <type>Lookup</type>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>