force-app/main/default/objects/Match__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <label>Winner</label>
    <type>Lookup</type>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Matches Won</relationshipLabel>
    <relationshipName>Matches_Won</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>